--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ section {
     margin-bottom: 20px;
 }
 .projeto img {
-    width: 300px;
-    height: 150px; 
+    width: 500px;
+    height: 250px; 
+    display: flex;
 }
 
 #contato {
